# mod-gen

./: Cargo.toml
src/: args.rs  config.rs  gen.rs  lib.rs  module.rs
tests/: gen.rs
tests/others/: mod.rs  one.rs  two.rs
